# idp-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  IDP_Pipeline_完整技術報告.docx  README.md  pyproject.toml  requirements.txt  test_upload.py
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  logging_config.py
app/models/: schemas.py
app/services/: chunking_service.py  docling_parser.py  ocr_service.py  pipeline.py  vector_store.py  vlm_service.py
app/utils/: file_handler.py  task_manager.py
configs/: default.yaml
docs/: api_examples.md
scripts/: setup_env.sh
tests/: conftest.py  test_api.py  test_pipeline.py  test_services.py
